--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 						<!-- Cv -->
 							<article id="Cv">
-								<span class="image main"><img src="images/cv-giani-pesavento-1.png" alt="" /></span>
+								<span class="image main"><img src="images/Cv-1.png" alt="" /></span>
 								
 								
 							</article>
